[tool.poetry]
name = "repl_python3_Robinhood-Trader"
version = "0.1.0"
description = ""
authors = ["SetoKibah <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
config = "^0.5.0"
robin-stocks = "^2.0.4"
pyotp = "^2.6.0"
pandas = "^1.2.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
